Arrow and Squash fixes

--- a/styles.css
+++ b/styles.css
@@ -145,16 +145,6 @@ nav ul li a:hover {
 .r-projects.hidden {
     display: none;
   }
-  
-  .r-toggle::after {
-    content: " ▼";
-    font-size: 0.8rem;
-    transition: transform 0.3s ease;
-  }
-  
-  .r-toggle.open::after {
-    transform: rotate(180deg);
-  }
 
 .r-overlay {
     position: absolute;
